# stm32f407-tests-rs

./: Cargo.toml  LICENSE  compile_binary.sh  flash_binary.sh  memory.x
.cargo/: config.toml
