[package]
name = "stm32f407_tests"
authors = ["Ashwin Narayan < ashwinnarayan1994@gmail.com >"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"
test = false
bench = false

# Set up the release profile to optimize our binaries
[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "s"   # Optimize for size

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1"

stm32f4xx-hal = { version = "0.19", features = ["stm32f407", "rtic"] }

panic-probe = { version = "0.3", features = ["print-defmt"] }

fugit = "0.3"

defmt = "0.3"
defmt-rtt = "0.4"
